--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div id="clock">
+        <div class="box" id="clock">
             18:30:00
         </div>
     </div>
